# startpoint-cn-launcher

./: .gitignore  PLAN.md  README.md  package-lock.json  package.json
renderer/: app.js  index.html  style.css
resources/jdk/: ThirdPartyNotices.txt
resources/jdk/lib/: jawt.lib  jvm.lib
resources/server/: package-lock.json  package.json
resources/server/assets/: advent_event_quest.json  boss_battle_quest.json  boss_coin_shop.json  boss_coin_shop_item_category_map.json  box_gacha.json  box_reward.json  carnival_event_quest.json  carnival_event_quest_scores.json  cdn_general_shop_whitelist.json  challenge_dungeon_event_quest.json  character.json  character_quest.json  clear_reward.json  config.json  confirmed_seeds.json  daily_challenge_point_lookup.json  daily_exp_mana_event_quest.json  daily_week_event_quest.json  default_player_template.json  device_seeds.json  equipment_enhancement_shop.json  equipment_ids.json  equipment_lookup.json  event_challenge_point_map.json  event_item_shop_id_map.json  ex_quest.json  expert_single_event_quest.json  gacha_campaign.json  gacha_movie_seeds.json  gacha_movie_seeds_fes_guarantee.json  gacha_movie_seeds_normal_guarantee.json  gacha_rate_up_movie_seeds.json  gacha_rate_up_movie_seeds_fes.json  gacha_rate_up_movie_seeds_fes_guarantee.json  gacha_rate_up_movie_seeds_normal.json  gacha_rate_up_movie_seeds_normal_guarantee.json  general_shop.json  item_data.json  (+33 more)
scripts/: build-release.ps1
src-tauri/: Cargo.toml  nsis-hooks.nsh  nsis-installer-template.nsi  tauri.conf.json
src-tauri/src/: lib.rs
tools/: patch-apk.mjs
(+17 files in other folders)
